# kenning-pipeline-manager

./: .buildinfo  .ci.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build  changelogs.html  cleanup  dataflow-format.html  demo.html  example-server.html  external-app-communication.html  frontend-features.html  genindex.html  graph-builder.html  index.html  introduction.html  objects.inv  package.json  project-readme.html  pyproject.toml  requirements.txt  run  searchindex.js  setup.py  specification-builder.html  specification-format.html  specification.json  validate
.github/scripts/: lint-commits.sh  lint-frontend.sh
.github/workflows/: ci.yml
_downloads/15b4726cdef600e784cf4fd9dd8bb8f8/: sample-subgraph-dataflow.json
_downloads/1679de2e9dd81b366ad1217f43ba3fae/: sample-dataflow.json
_downloads/20bdcf385a3fda33dde2ef03ccf58d19/: sample-include-subgraph-dataflow.json
_downloads/69b90b17335fced319b23b365233a3c7/: sample-inout-dataflow.json
_downloads/6f3cd8ac9e211332bf48accd8addc488/: sample-include-subgraph-specification.json
_downloads/76422acad1a6e13cf63228c3ceb7e2c2/: sample-multiple-io-specification.json
_downloads/7780306b31af748c7b0835ff795798c0/: sample-loopback-dataflow.json
_downloads/7aeb79dcc41b46c7b605fab63a235590/: sample-subgraph-specification.json
_downloads/84b263415c3160578806998a5a3b0fbc/: sample-include-dataflow.json
_downloads/89ebbb65c7b472963c7604cf1cfe4910/: sample-rectangle-grouping-dataflow.json
_downloads/8b30b8dd9e60ef0288f7a6a8bd0d420b/: sample-include-specification.json
_downloads/9226ffb7c3335eac049cb946cfb4e1c8/: sample-dynamic-interfaces-specification.json
_downloads/935d232325d50068a9e8a962ef5029e1/: sample-loopback-specification.json
_downloads/aa9c25133ea48648903cafc41e1949c9/: sample-interface-groups-specification.json
_downloads/b0a7a6c07ee6bcbee604908b37ba93e1/: sample-specification.json
_downloads/d2635abcf1b606657686cb88ce94764b/: sample-inout-specification.json
_downloads/d28af241a0b3ca10249987187f14a19d/: sample-multiple-io-dataflow.json
_downloads/e0ecbf9d0eb63ead775c4a618f47f0ae/: sample-rectangle-grouping-specification.json
_downloads/e731a0bb1bab931711be25e277759b75/: sample-inheritance-specification.json
_downloads/fcfce45caa10fb38bf549d409ee38870/: sample-dynamic-interfaces-dataflow.json
_sources/: changelogs.md.txt  dataflow-format.md.txt  demo.md.txt  example-server.md.txt  external-app-communication.md.txt  frontend-features.md.txt  index.md.txt  introduction.md.txt  project-readme.md.txt  specification-builder.md.txt  specification-format.md.txt
_static/: pipeline-manager.html
_static/css/: styles.css
backend/: app.py  dataflow_schema.json  server.py  state_manager.py
docs/: Makefile  build-examples  mmdc  requirements.txt
docs/source/: changelogs.md  conf.py  dataflow-builder.md  dataflow-format.md  demo.md  example-server.md  external-app-communication.md  frontend-features.md  graph-builder.md  index.md  introduction.md  specification-builder.md  specification-format.md
examples/: __init__.py  sample-dataflow.json  sample-dynamic-interfaces-dataflow.json  sample-dynamic-interfaces-specification.json  sample-include-dataflow.json  sample-include-specification.json  sample-include-subgraph-dataflow.json  sample-include-subgraph-specification.json  sample-inheritance-dataflow.json  sample-inheritance-specification.json  sample-inout-dataflow.json  sample-inout-specification.json  sample-interface-groups-dataflow.json  sample-interface-groups-specification.json  sample-long-specification.json  sample-loopback-dataflow.json  sample-loopback-specification.json  sample-multiple-io-dataflow.json  sample-multiple-io-specification.json  sample-related-graph-specification.json  sample-specification-urls.json  sample-specification.json  sample-subgraph-dataflow.json  sample-subgraph-specification.json
examples/frontend-tests/: error-message-after-1s.json  failed-export.json  immediately-disconnect.json  immediately-error-message.json  immediately-failed-validation.json  immediately-run-success.json  immediately-success-validation.json  progress-bar-test.json  success-export.json  success-message-disconnect-after-1s.json
examples/frontend_tests/: __init__.py  error-message-after-1s.json  failed-export.json  immediately-disconnect.json  immediately-error-message.json  immediately-failed-validation.json  immediately-run-success.json  immediately-success-validation.json  progress-bar-test.json  success-export.json  success-message-disconnect-after-1s.json
frontend/: README.md  package-lock.json
frontend/src/: App.vue  Editor.vue  Home.vue  NodeFactory.js  examples.js  main.js
frontend/styles/: editor.scss
pipeline_manager/: __init__.py  __main__.py  frontend_builder.py  html_to_img.py  html_to_svg.py  specification_builder.py  specification_reader.py  validator.py
pipeline_manager/backend/: __init__.py  app.py  fastapi.py  flask.py  main.py  run_backend.py  run_in_parallel.py  server.py  socketio.py  state_manager.py  tcp_socket.py
pipeline_manager/dataflow_builder/: __init__.py  data_structures.py  dataflow_builder.py  dataflow_graph.py  entities.py  node.py  utils.py
pipeline_manager/examples/: frontend_tester_dataflow.json  frontend_tester_specification.json  sample-specification.json  sample_dataflow.json
pipeline_manager/frontend/: .env.static  .eslintrc.cjs  .eslintrc.js  .git-blame-ignore-revs  .prettierrc  README.md  __init__.py  index.html  package-lock.json  package.json  playwright.config.js  tsconfig.json  validator.js  vue.config.js
pipeline_manager/frontend_tester/: README.md  __init__.py  conftest.py  frontend_tester_dataflow.json  frontend_tester_specification.json  rpc_client.py  test_subgraph_switching.py  tester_client.py  tester_mirror.py
pipeline_manager/resources/: __init__.py  broken_image.js
pipeline_manager/scripts/: __init__.py  build.py  cleanup.py  run.py  validate.py
pipeline_manager/sphinxext/: __init__.py  draw_graph.py
src/: main.js
static-demo/: index.html
tester_api/: index.html  sample-specification.json
(+349 files in other folders)
