# Copyright (c) 2022-2023 Antmicro <www.antmicro.com>
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-manager"
version = "0.0.1"
description = "Pipeline Manager - data-based, application-agnostic web application for creating, visualizing and managing dataflows in various applications."
authors = [
    {name = "Antmicro Ltd.", email = "contact@antmicro.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
readme = "README.md"
dependencies = [
    "asgiref==3.7.2",
    "attrs==23.1.0",
    "beautifulsoup4==4.12.2",
    "click==8.1.3",
    "Flask==2.2.2",
    "Flask-Cors==3.0.10",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.2",
    "jsonschema @ git+https://github.com/python-jsonschema/jsonschema@eb8255a473b4f6e9439322f9ec93e345bc7f17d6",
    "json-rpc==1.15.0",
    "MarkupSafe==2.1.1",
    "pyrsistent==0.18.1",
    "pytest==7.4.0",
    "python-socketio[client]==5.10.0",
    "referencing==0.29.0",
    "requests==2.28.2",
    "six==1.16.0",
    "uvicorn[standard]==0.24.0.post1",
]

[project.optional-dependencies]
docs = [
    "antmicro-sphinx-utils @ git+https://github.com/antmicro/antmicro-sphinx-utils.git",
    "sphinxcontrib-napoleon",
    "jsonschema2md",
]
backend-communication = [
    "pipeline-manager-backend-communication @ git+https://github.com/antmicro/kenning-pipeline-manager-backend-communication.git",
]
mirror = [
    "deepdiff==6.7.0",
    "pipeline-manager[backend-communication]",
]

[project.urls]
homepage = "https://antmicro.github.io/kenning-pipeline-manager/"
repository = "https://github.com/antmicro/kenning-pipeline-manager"

[project.scripts]
pipeline_manager = "pipeline_manager.__main__:main"

[tool.setuptools.packages.find]
include = [
    "pipeline_manager*"
]
exclude = [
    "examples*"
]
namespaces = false

[tool.setuptools.package-data]
pipeline_manager = ["**/*.*", "frontend/.env.static"]
